# voice_ime

./: .gitignore  Cargo.toml  README.md  package.bat
models/: auto_corrections.txt  commands.toml  corrections.txt  homophones.txt  hotwords.txt
src/: asr.rs  audio.rs  bigram.rs  commands.rs  config.rs  correct.rs  hotkey.rs  learn.rs  lib.rs  main.rs  output.rs  preview.rs  punctuation.rs  settings.rs  ui.rs  vad.rs
