[package]
name = "voice_ime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voice_ime"
path = "src/main.rs"

[profile.release]
opt-level = "z"        # 最小体积
lto = true             # 全链接优化
codegen-units = 1      # 单编译单元，最大优化
panic = "abort"        # 去掉 unwind 栈
strip = true           # 去符号表

[dependencies]
sherpa-onnx = "1.13"
cpal = "0.15"
enigo = { version = "0.6", default-features = false }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
anyhow = "1.0"
log = "0.4"
simplelog = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
] }